--- a/templates/users/owners/register.html
+++ b/templates/users/owners/register.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="text-center">Owner Register</h1>
-    <form action="" method="post" class="container mt-5" enctype="multipart/form-data">
+    <form action="{%url 'owner_register'%}" method="post" class="container mt-5" enctype="multipart/form-data">
       {% csrf_token %}
     <input type="text" name="first_name" class="form-control mb-3" placeholder="First Name">
     <input type="text" name="last_name" class="form-control mb-3" placeholder="Last Name">
