--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,33 +1,37 @@
+{% extends "home.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>PG Finder Login</title>
-  <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head>
-<body>
-  <div class="background"></div>
-  <div class="container">
-    <div class="left-section">
-      <h1>
-        <span>There's a smarter<br>way to PG's<br>around</span>
-      </h1>
-      <p>
-        Sign up with your details and get exclusive access to discounts and savings on PG stays and with our many partners.
-      </p>
-    </div>
-    <form class="login-form">
-      <div class="vertical-text">PG Finder Login</div>
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <div class="form-links">
-        <a href="#">Owner Register?</a>
-        <a href="#">Guest Register?</a>
-        <a href="#">Forgot Password?</a>
-      </div>
-    </form>
-  </div>
-</body>
-</html>
+{% block content %}
+<section class="section-conten padding-y" style="min-height:67vh">
+
+<!-- ============================ COMPONENT LOGIN   ================================= -->
+	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
+      <div class="card-body">
+      <h4 class="card-title mb-4">Login</h4>
+      <form action="{% url 'user_login' %}" method="POST">
+          {% csrf_token %}
+      	 
+          <div class="form-group ">
+			 <input name="email" class="form-control mb-2" placeholder="Email" type="email" required autofocus>
+          </div> <!-- form-group// -->
+          <div class="form-group">
+			<input name="password" class="form-control mb-2" placeholder="Password" type="password" required>
+          </div> <!-- form-group// -->
+          
+          <div class="form-group mb-2">
+          	<a href="#" class="float-right text-info">Forgot password?</a> 
+            
+          </div> <!-- form-group form-check .// -->
+          <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+          </div> <!-- form-group// -->    
+      </form>
+      </div> <!-- card-body.// -->
+    </div> <!-- card .// -->
+
+     <p class="text-center mt-4">Don't have account? <a href="#">Sign up</a></p>
+     <br><br>
+<!-- ============================ COMPONENT LOGIN  END.// ================================= -->
+
+
+</section>
+{% endblock %}
