--- a/templates/users/owners/register.html
+++ b/templates/users/owners/register.html
@@ -1,4 +1,4 @@
-{% extends "home.html" %}
+{% extends "base.html" %}
 {% load static %}
     {% block title %}Owner Registration Form{% endblock %}
     
@@ -16,7 +16,7 @@
     <div class="container-fluid py-4">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-10">
-                <div class="card shadow">
+                <div class="card shadow ">
                     <div class="card-header bg-primary text-white text-center">
                         <h3 class="mb-0">
                             <i class="bi bi-person-plus me-2"></i>
