--- a/templates/home.html
+++ b/templates/home.html
@@ -54,9 +54,9 @@
         </div>
         <div class="price">₹ {{pg.price_per_month}}</div>
       </div>
-      <div class="amen">${{pg.amenities}}</div>
+      <div class="amen">{{pg.amenities}}</div>
       <div class="actions" style="margin-top:10px">
-        <a href="{% url 'pg_detail' pg.slug %}" class="btn-outline">View details</a>
+        <a href="{% url 'pg_detail' pg.slug %}" class="btn btn-outline">View details</a>
         {% comment %} <button class="btn-outline " data-view="${p.id}">View details</button> {% endcomment %}
         {% comment %} <button class="btn" data-book="${p.id}">Book a visit</button> {% endcomment %}
       </div>
