--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -10,13 +10,31 @@
         <a href="#map">Map</a>
         <a href="#how">How it works</a>
       </nav>
-
+      <form action="{%url 'search' %}" class="search" method='GET'>
+			<div class="input-group w-100">
+			    <input type="text" class="form-control" style="width:60%;" placeholder="Search" name="keyword" required>
+			    
+			    <div class="input-group-append">
+			      <button class="btn btn-primary" type="submit">
+			       <i class="fa fa-search"> search</i>
+			      </button>
+			    </div>
+		    </div>
+		</form>
       <!-- 👇 New Login / Signup buttons -->
       <div class="auth-buttons">
+        {% if user.is_authenticated %}
+          <a href="{% url 'user_logout' %}" class="logout"><i class="ri-logout-box-line"></i> Logout</a>
+        {% else %}
         <a href="{% url 'user_login' %}" class="login"><i class="ri-login-circle-line"></i> Login</a>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <i class="ri-user-add-line"></i>welcome, <div>{{user.username}}</div>
+        {% else %}
         <a href="{% url 'signup' %}" class="signup"><i class="ri-user-add-line"></i> Signup</a>
+        {% endif %}
       </div>
-
-      <button class="cta">List your PG</button>
+      <a href="{% url 'pgs' %}" class="btn btn-primary cta">List your PG</a>
+     
     </div>
   </header>
