--- a/templates/users/clients/client_register.html
+++ b/templates/users/clients/client_register.html
@@ -3,6 +3,7 @@
 
 {% block aadhar %}{% endblock %}
 {% block image_upload %}
+ <label for="image" class="form-label">Profile Image </label>
 <input type="file" class="form-control" id="image" name="image" accept="image/*" onchange="previewImage(event)" >
 <div class="form-text">Upload a profile picture (optional).</div>
 {% endblock %}
