adding terms&conditions

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,4 +3,8 @@
     <div class="container small">
       &copy;<span id="year"></span> PG Finder • Built with the Beloved Devlopers.
     </div>
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
   </footer>
