--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -8,7 +8,7 @@
       <nav class="nav small">
         <a href="#explore">Explore</a>
         <a href="#map">Map</a>
-        <a href="#how">How it works</a>
+        <a href="#contact"> Contact Us</a>
       </nav>
       <form action="{%url 'search' %}" class="search" method='GET'>
 			<div class="input-group w-100">
