--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,40 +1,22 @@
 {% load static %}
-<header class="header">
-    <div class="container header-inner">
-      <div class="brand">
-        <div class="brand-badge">PG</div>
-        <div><a href="{% url 'home' %}" class="btn btn-primary">PG Finder</a></div>
-      </div>
-      <nav class="nav small">
-        <a href="#explore">Explore</a>
-        <a href="#map">Map</a>
-        <a href="#contact"> Contact Us</a>
-      </nav>
-      <form action="{%url 'search' %}" class="search" method='GET'>
-			<div class="input-group w-100">
-			    <input type="text" class="form-control" style="width:60%;" placeholder="Search" name="keyword" required>
-			    
-			    <div class="input-group-append">
-			      <button class="btn btn-primary" type="submit">
-			       <i class="fa fa-search"> search</i>
-			      </button>
-			    </div>
-		    </div>
-		</form>
-      <!-- 👇 New Login / Signup buttons -->
-      <div class="auth-buttons">
-        {% if user.is_authenticated %}
-          <a href="{% url 'user_logout' %}" class="logout"><i class="ri-logout-box-line"></i> Logout</a>
-        {% else %}
-        <a href="{% url 'user_login' %}" class="login"><i class="ri-login-circle-line"></i> Login</a>
-        {% endif %}
-        {% if user.is_authenticated %}
-        <i class="ri-user-add-line"></i>welcome, <div>{{user.username}}</div>
-        {% else %}
-        <a href="{% url 'signup' %}" class="signup"><i class="ri-user-add-line"></i> Signup</a>
-        {% endif %}
-      </div>
-      <a href="{% url 'pgs' %}" class="btn btn-primary cta">List your PG</a>
-     
-    </div>
-  </header>
+    <nav class="navbar">
+      <a class="logo" href="{% url 'home' %}">
+      <div class="logo">E-Hostel<span>& PG</span></div>
+    </a>
+        <ul class="nav-links">
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'home'%}">Home</a></li>
+            <li><a href="#">Book Now</a></li>
+            <li><a href="#">Rooms</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Visit</a></li>
+            {% else %}
+            <li><a href="{%url 'user_login'%}">Login</a></li>
+            <li><a href="{%url 'signup'%}">Signup</a></li>
+
+            {% endif %}
+        </ul>
+    </nav>
+
