--- a/templates/users/forgotPassword.html
+++ b/templates/users/forgotPassword.html
@@ -4,6 +4,8 @@
 {% block newlink %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="{% static 'css/nav.css' %}">
 {% endblock %}
 {% block content %}
 <section class="section-conten padding-y" style="min-height:84vh">
@@ -23,17 +25,17 @@
          
           
           <div class="form-group mb-3">
-          	<a href="{%url 'user_login' %}" class="float-right">Got password? Login</a> 
+          	<a href="{%url 'user_login' %}" class="float-right ">Got password? Login</a> 
            
           </div> <!-- form-group form-check .// -->
-          <div class="form-group">
+          <div class="d-grid mx-auto">
               <button type="submit" class="btn btn-primary btn-block"> Submit  </button>
           </div> <!-- form-group// -->    
       </form>
       </div> <!-- card-body.// -->
     </div> <!-- card .// -->
 
-     <p class="text-center mt-4 " style="color: white; opacity: 0.8;">Don't have account? <a href="{% url 'signup' %}">Sign up</a></p>
+     <p class="text-center mt-4 ">Don't have account? <a href="{% url 'signup' %}">Sign up</a></p>
      <br><br>
 <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
 
