--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,60 +1,51 @@
 {% extends "base.html" %}
 {% load static %}
-{% block link %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+e2Jb3rVbQKkqgC3kG1g2h1xg2P9rV+l9g6q1gQ5M=" crossorigin=""/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+{% block newlink %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
-
 {% block content %}
-<section class="section-conten padding-y" style="min-height:67vh">
 
 {% if request.GET.command == 'verification' %}
+{% block link %}
+<link href="{% static 'css/bootstrap.css'%}" rel="stylesheet" type="text/css"/>
+{% endblock %}
 <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
 Thank you for registering with us. We have sent you a verification email to your email address [{{ request.GET.email }}].
 <br><br>
 Already verified? <a href="{% url 'user_login' %}">Login</a>
 </div>
-
 {% else %}
-
-<!-- ============================ COMPONENT LOGIN   ================================= -->
-<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
-    {% include "includes/alert.html" %}
-      <div class="card-body">
-      <h4 class="card-title mb-4">Login</h4>
-      <form action="{% url 'user_login' %}" method="POST">
-          {% csrf_token %}
-      	 
-          <div class="form-group ">
-			 <input name="email" class="form-control mb-2" placeholder="Email or Username" type="text" required autofocus>
-          </div> <!-- form-group// -->
-          <div class="form-group">
-			<input name="password" class="form-control mb-2" placeholder="Password" type="password" required>
-          </div> <!-- form-group// -->
-          
-          <div class="form-group mb-3">
-          	<a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a> 
-            
-          </div> <!-- form-group form-check .// -->
-          <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block"> Login  </button>
-          </div> <!-- form-group// -->    
-      </form>
-      </div> <!-- card-body.// -->
-    </div> <!-- card .// -->
-
-     <p class="text-center text-muted mt-4" style="color:white !important; opacity: 0.8;">Don't have account? <a  href="{% url 'signup'%}">Sign up</a></p>
-     <br><br>
-<!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-
-
-{% endif %}
-</section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-{% endblock %}
+<div class="login-container">
+  <!-- LEFT: BRAND -->
+  
+  <div class="login-left">
+    <div class="logo">PG<span>Finder</span></div>
+    <div class="tagline">Find the perfect hostel or PG for your stay. Comfortable, affordable, and hassle-free!</div>
+  </div>
+  
+  <!-- RIGHT: LOGIN FORM -->
+  <div class="login-right">
+    <form action="{% url 'user_login' %}" class="login-form" method="POST">
+      {% csrf_token %}
+      <h2>Login</h2>
+      <div class="alert-css">{% include "includes/alert.html" %}</div>
+      <label for="email">Email / Username</label>
+      <input name="email" id="email" placeholder="Enter your email / username" required>
+      
+        <label for="password">Password</label>
+        <input name="password" type="password" id="password" placeholder="Enter your password" required>
+        
+        <button type="submit">Login</button>
+        <div class="signup-link">
+          Don't have an account? <a href="{% url 'signup'%}">Signup</a>
+        </div>
+        
+        <div class="signup-link">
+            <a href="{% url 'forgotPassword' %}">Forget account?</a>
+          </div>
+        </form>
+      </div>
+    </div>
+    {% endif %}
+    
+    {% endblock %}
