--- a/templates/users/owners/register.html
+++ b/templates/users/owners/register.html
@@ -3,14 +3,11 @@
     {% block title %}Owner Registration Form{% endblock %}
     
     {% block link %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-      <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+e2Jb3rVbQKkqgC3kG1g2h1xg2P9rV+l9g6q1gQ5M=" crossorigin=""/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+  
     {% endblock %}
     {% block content%}
     <div class="container-fluid py-4" >
