--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
   {% block title %}PG Finder Signup{% endblock %}
+  {% block newlink %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/nav.css' %}">
+  {% endblock %}
 
   {% block content %}
 
@@ -7,7 +13,7 @@
       <div class="container h-100 d-flex align-items-center">
     <div class="row w-100">
       <!-- Left Side Text -->
-      <div class="col-md-6 d-flex flex-column justify-content-center text-white bg-dark bg-opacity-50 p-4 rounded-3">
+      <div class="col-md-6 d-flex flex-column justify-content-center  p-4 rounded-3">
         <h1>Welcome to PG Finder</h1>
         <p>Find the perfect paying guest accommodation easily. Whether you are a client looking for a place to stay or an owner wanting to list your property, we have you covered. Start your journey with us today!</p>
       </div>
