--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,6 @@
 
 {% block content %}{% endblock %}
 
-{% include "includes/footer.html" %}
+{% comment %} {% include "includes/footer.html" %} {% endcomment %}
 </body>
 </html>
