--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,13 +6,16 @@
 {% block content %}
 
 {% if request.GET.command == 'verification' %}
-{% block link %}
-<link href="{% static 'css/bootstrap.css'%}" rel="stylesheet" type="text/css"/>
-{% endblock %}
-<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
-Thank you for registering with us. We have sent you a verification email to your email address [{{ request.GET.email }}].
-<br><br>
-Already verified? <a href="{% url 'user_login' %}">Login</a>
+
+<div class="verification-container">
+  <div class="verification-message">
+    <h2>✓ Verification Email Sent</h2>
+    <p>Thank you for registering with us. We have sent you a verification email to your email address:</p>
+    <p class="email-highlight">{{ request.GET.email }}</p>
+    <p>Please check your inbox and click the verification link to activate your account.</p>
+    <br>
+    <p>Already verified? <a href="{% url 'user_login' %}">Login here</a></p>
+  </div>
 </div>
 {% else %}
 <div class="login-container">
