--- a/templates/users/clients/client_register.html
+++ b/templates/users/clients/client_register.html
@@ -1,6 +1,9 @@
 {% extends "users/owners/register.html" %}
+{% block title %}Client Registration Form{% endblock %}
 {% block usertype %}Client{% endblock %}
-
+{% block form_action %}
+ <form action="{% url 'client_register' %}" id="registrationForm"  method="POST" enctype="multipart/form-data">
+{% endblock %}
 {% block aadhar %}{% endblock %}
 {% block image_upload %}
  <label for="image" class="form-label">Profile Image </label>
