--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar">
   <a class="logo" href="{% url 'home' %}">
-    <div class="logo">PG Finder<span>& Hostel</span></div>
+    <div class="logo"> <span>PG</span>Finder</div>
   </a>
   <ul class="nav-links">
     {% if user.is_authenticated %}
